# clb_ws

./: .gitignore  1.md  AGENTS.md  README.md  README_JAZZY.md  build_r1.sh  run_display.sh  run_jazzy.sh  run_mapping_fusion.sh  run_mapping_fusion_obstacle.sh  run_mapping_laser.sh  run_mapping_laser_obstacle.sh  run_nav.sh  run_noetic.sh  run_obstacle_nav.sh  run_sim.sh  stop_sim.sh  teleop_noetic.sh  test_obstacle_loop.sh
devel/: .catkin  (+2 more)
src/R1/: AGENTS.md  CMakeLists.txt  package.xml
src/R1/config/: amcl.yaml  base_local_planner.yaml  base_local_planner_obstacle.yaml  costmap_common.yaml  costmap_common_obstacle.yaml  docking.yaml  dwa_local_planner_obstacle.yaml  ekf_mapping.yaml  global_costmap.yaml  global_costmap_obstacle.yaml  global_planner.yaml  gmapping_mapping.yaml  joint_names_R1.yaml  local_costmap.yaml  local_costmap_obstacle.yaml  move_base_recovery.yaml  ros_controllers.yaml  rtabmap_mapping.yaml
src/R1/gazebo_home/.dbus/session-bus/: 5a466037009a4e0b8fa64fe5b8c0e0e7-0
src/R1/launch/: display.launch  docking.launch  gazebo.launch  mapping_fusion.launch  mapping_laser.launch  nav_obstacle_test.launch  nav_test.launch  navigation.launch  sim_bringup.launch  sim_mapping_fusion.launch  sim_mapping_laser.launch
src/R1/maps/: charging_arena.pgm  charging_arena.yaml  obstacle_arena.pgm  obstacle_arena.yaml
src/R1/rviz/: mapping_fusion.rviz  mapping_laser.rviz  navigation.rviz  sim.rviz
src/R1/scripts/: ackermann_cmd_vel_adapter.py  cmd_vel_collision_guard.py  cmd_vel_limiter.py  docking_controller.py  gazebo_ackermann_effort_bridge.py  goal_sanitizer.py  ground_truth_localization.py  odom_sanitizer.py  spawn_robot_model.py  static_joint_state_publisher.py
src/R1/urdf/: R1.urdf  R1_rviz.urdf
src/R1/worlds/: charging_arena.world  obstacle_arena.world
src/zebrat/: CMakeLists.txt  package.xml
src/zebrat/behavior_trees/: nav_to_pose_replan_if_invalid.xml
src/zebrat/config/: ekf_area_full.yaml  nav2_area.yaml  nav2_area_full.yaml  navigation_goals_area.yaml  navigation_local_costmap.yaml  navigation_teb.yaml  r1_ackermann_control.yaml  r1_ros2_control.yaml  world_profiles.yaml
src/zebrat/gazebo_models/ambulance/meshes/: ambulance.mtl
src/zebrat/gazebo_models/apartment/meshes/: apartment.dae
src/zebrat/gazebo_models/brick_box_3x1x3/materials/scripts/: generated.material
src/zebrat/gazebo_models/brick_box_3x1x3/meshes/: simple_box.dae
src/zebrat/gazebo_models/bus/meshes/: bus.mtl
src/zebrat/gazebo_models/cessna/meshes/: body.dae  cessna_front_wheel.dae  cessna_prop.dae  cessna_rear_left_wheel.dae  elevators.dae  left_aileron.dae  right_flap.dae  rudder.dae
src/zebrat/gazebo_models/construction_barrel/meshes/: construction_barrel.dae
src/zebrat/gazebo_models/construction_cone/meshes/: construction_cone.dae
src/zebrat/gazebo_models/demo_joint_damping/meshes/: arm.stl  base_model.dae
src/zebrat/gazebo_models/demo_joint_types/materials/scripts/: generated.material
src/zebrat/gazebo_models/drc_practice_orange_jersey_barrier/meshes/: jersey_barrier.dae
src/zebrat/gazebo_models/drc_practice_valve_wall/meshes/: five_dice_wall.dae
src/zebrat/gazebo_models/drc_practice_wheel_valve/meshes/: valve_wheel.dae
src/zebrat/gazebo_models/drc_practice_white_jersey_barrier/meshes/: jersey_barrier.dae
src/zebrat/gazebo_models/dumpster/materials/scripts/: generated.material
src/zebrat/gazebo_models/dumpster/meshes/: dumpster.dae
src/zebrat/gazebo_models/fast_food/materials/scripts/: generated.material
src/zebrat/gazebo_models/fast_food/meshes/: fast_food.dae
src/zebrat/gazebo_models/fire_station/meshes/: fire_station.dae
src/zebrat/gazebo_models/gas_station/materials/scripts/: generated.material
src/zebrat/gazebo_models/gas_station/meshes/: gas_station.dae
src/zebrat/gazebo_models/ground_plane/: model.config  model.sdf
src/zebrat/gazebo_models/house_3/materials/scripts/: generated.material
src/zebrat/gazebo_models/house_3/meshes/: house_3.dae
src/zebrat/gazebo_models/law_office/meshes/: law_office.dae
src/zebrat/gazebo_models/mud_box/materials/scripts/: generated.material
src/zebrat/gazebo_models/person_walking/meshes/: walking.dae
src/zebrat/gazebo_models/playground/meshes/: playground.dae
src/zebrat/gazebo_models/polaris_ranger_ev/materials/scripts/: generated.material
src/zebrat/gazebo_models/polaris_ranger_ev/meshes/: polaris.dae
src/zebrat/gazebo_models/racecar_description/models/MIT_Tunnel/: model.config  model.sdf
src/zebrat/gazebo_models/racecar_description/models/cone/: model.config  model.sdf
src/zebrat/gazebo_models/racecar_description/models/parking_1/: model.config  model.sdf
src/zebrat/gazebo_models/salon/meshes/: salon.dae
src/zebrat/gazebo_models/sun/: model.config  model.sdf
src/zebrat/gazebo_models/suv/meshes/: suv.mtl
src/zebrat/gazebo_models/table_marble/meshes/: table_lightmap.dae
src/zebrat/gazebo_models/thrift_shop/meshes/: thrift_shop.dae
src/zebrat/gazebo_models/tower_crane/meshes/: tower_crane.dae
src/zebrat/gazebo_models/water_tower/meshes/: water_tower.dae
src/zebrat/launch/: nav2_area.launch.py  nav2_area_full.launch.py  nav2_area_full_fusion.launch.py  r1_dynamic_obstacles.launch  rtabmap_rgbd.launch.py  sim_control.launch.py
src/zebrat/maps/: README.md  area_full_jazzy.pgm  area_full_jazzy.yaml  area_jazzy.pgm  area_jazzy.yaml
src/zebrat/rviz/: nav2_area.rviz  r1_jazzy.rviz
src/zebrat/scripts/: ackermann_cmd_arbiter.py  ackermann_cmd_safety_supervisor.py  depth_to_pointcloud.py  dynamic_obstacles.py  front_camera_compat_relay.py  gazebo_auto_unpause.py  gazebo_odometry.py  keyboard_ackermann_teleop.py  nav_sim.py  odom_pub.py  r1_ackermann_controller.py  safe_goal_relay.py  servo_commands.py  twist_to_ackermann.py  wheel_odometry.py
src/zebrat/scripts/laser_processing/: calculate-reverse.py  discrete_laser.py
src/zebrat/urdf/: R1_jazzy.urdf.xacro  R1_rviz.urdf  zebrat.urdf.xacro
src/zebrat/urdf/meshes/: Empty_Link1.STL
src/zebrat/urdf/sensors/: lidar.xacro
src/zebrat/worlds/: area.world  area_classic.world  area_full.world  wall_right_angle.world
(+66 files in other folders)
