<package format="2">
  <name>r1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for R1</p>
    <p>This package contains configuration data, 3D models and launch files
for R1 robot</p>
  </description>
  <author>R1 Robotics</author>
  <maintainer email="r1@example.com">R1 Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ackermann_steering_controller</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>amcl</depend>
  <depend>base_local_planner</depend>
  <depend>clear_costmap_recovery</depend>
  <depend>controller_manager</depend>
  <depend>gazebo_msgs</depend>
  <depend>dwa_local_planner</depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>geometry_msgs</depend>
  <depend>global_planner</depend>
  <depend>hardware_interface</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>robot_localization</depend>
  <depend>robot_state_publisher</depend>
  <depend>roslaunch</depend>
  <depend>rospy</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>gmapping</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>topic_tools</depend>
  <depend>transmission_interface</depend>
  <depend>rtabmap_slam</depend>
  <depend>rtabmap_sync</depend>
  <export>
    <architecture_independent />
  </export>
</package>
